<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stack Ranger</string>
    <string name="title_item_detail">Question Detail</string>
    <string name="properties">SlidingMenu Properties</string>
    <string name="general">General</string>
    <string name="viewpager">ViewPager</string>
    <string name="attach">Attach</string>
    <string name="title_bar">Title Bar Options</string>
    <string name="title_bar_slide">Sliding Title Bar</string>
    <string name="title_bar_content">Sliding Content Only</string>
    <string name="animations">Custom Animations</string>
    <string name="anim_zoom">Zoom</string>
    <string name="anim_scale">Scale</string>
    <string name="anim_fold">Fold</string>
    <string name="anim_slide">Slide Up</string>
    <string name="changing_fragments">Changing Fragments</string>
    <string name="responsive_ui">Responsive UI</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="left_and_right">Left and Right</string>
    <string name="github">GitHub</string>
    <string name="github_label">SlidingMenu on GitHub</string>
    <string name="what_is_this">What is this?</string>
    <string name="responsive_explanation">This is an example of a UI that responds well to device type. On phones, the
        menu will be placed inside a SlidingMenu, while on tablets the menu will be exposed alongside the content
        because we have enough room to always show it.
    </string>
    <string name="about">About</string>
    <string name="toast_no_data_fenched">No data fenched, please check your network.</string>
    <string name="licenses">Licenses</string>
    <string name="contact">Contact</string>
    <string name="about_msg">&lt;b>SlidingMenu&lt;/b> is an Open Source Android library
        that allows developers to easily create applications with sliding menus like those
        made popular in the Google+, YouTube, and Facebook applications.
        You can find it on GitHub by clicking the little octocat icon in the ActionBar.
        Feel free to use it all you want in your Android apps provided
        that you cite this project and include the license in your app.
        &lt;br>&lt;br>
        SlidingMenu is currently used in some incredibly popular Android
        apps such as Zappos, Plume, VLC for Android, and The Verge.
        If you are using SlidingMenu in your app and would like to be
        listed here, please let me know via Twitter (@slidingmenu)!
    </string>
    <string name="apache_license">&lt;b>SlidingMenu &lt;/b>&lt;br>
        \u00A9 2012 Jeremy Feinstein&lt;br>
        SlidingMenu is licensed under the Apache License Version 2.0.
        &lt;br>&lt;br>
        &lt;b>ActionBarSherlock &lt;/b>&lt;br>
        \u00A9 2012 Jake Wharton&lt;br>
        ActionBarSherlock is licensed under the Apache License Version 2.0.
        &lt;br>&lt;br>
        &lt;b>The Apache License Version 2.0&lt;/b>&lt;br>
        You may obtain a copy of the License at&lt;br>
        &lt;center>&lt;a href=\'http://www.apache.org/licenses/LICENSE-2.0\'>
        "http://www.apache.org/licenses/LICENSE-2.0&lt;/a>&lt;/center>&lt;br>
        Unless required by applicable law or agreed to in writing,
        software distributed under the License is distributed on an
        \'AS IS\' BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
        either express or implied. See the License for the specific
        language governing permissions and limitations under the License.
    </string>
    <string name="no_email">Sorry, I couldn\'t find any e-mail apps on your phone</string>
    <string name="no_data">No data pull down to refresh</string>
    <string name="click_to_load_more">Click to load more</string>
    <string name="votes">votes</string>
    <string name="answersL">answers</string>
    <string name="viewsL">views</string>
    <string name="loading">Loading…</string>
    <string name="title_answer">Answers</string>
    <string name="btn_back">btn_back</string>
    <string name="site_icon">site_icon</string>
    <string name="pull_indicator">base_pull_list_msg_indicator_arrow_down_drawable</string>
    <string name="fav">fav</string>
    <string name="write">write</string>
    <string name="prev">previous</string>
    <string name="next">next</string>
    <string name="share">share</string>

</resources>